# elder_helper

./: .env.example  .gitignore  PRODUCT_MANUAL.md  README.md  app_desktop.py  app_destop.py  environment.yml  requirements.txt
elderly-assistant-agent/: .env.example  INSTALL.md  README.md  pyproject.toml
elderly-assistant-agent/src/: __init__.py
elderly-assistant-agent/src/agent/: elderly_agent.py
elderly-assistant-agent/src/api/: routes.py
elderly-assistant-agent/src/knowledge/: __init__.py  rag_service.py  video_extractor.py
elderly-assistant-agent/src/models/: __init__.py  action.py  task.py
elderly-assistant-agent/src/services/: asr_service.py  embedding_service.py  planner_service.py  tts_service.py
elderly-assistant-agent/tests/: quick_test_asr.py  test_screen_overlay.py
src/: cli.py  config.py  gui_agent.py  main.py  run_agent.py
src/agent/: __init__.py  elderly_agent.py  executor.py
src/api/: __init__.py
src/knowledge/: rag_service.py  video_extractor.py
src/models/: action.py  intent.py  knowledge.py  session.py  skill_set.py  task.py
src/services/: __init__.py  asr_service.py  embedding_service.py  executor_service.py  llm_service.py  planner_service.py  safety_service.py  tts_service.py  (+1 more)
tests/: conftest.py  quick_test_uia_elements.py  test_asr_service.py  test_executor.py  test_knowledge.py  test_llm_service.py  test_models.py  test_ocr_locate.py  test_planner.py  test_rag.py  test_rag_debug.py  test_rag_simple.py  test_safety.py  test_video.py  test_video_extractor.py  test_video_full.py  test_vision_service.py  test_vl_ocr.py
(+3 files in other folders)
